# brainfuckplus

./: .gitignore  CMakeLists.txt  README.md  brainfuck.c  breakpoint.bf  build.bat  copy.bf  include.bf  loop.bf  mul.bf  out.bf  setup.sh
.github/workflows/: cmake-single-platform.yml
examples/: add.bfp  hello.bf  invalid_ptr.bf  read_string.bf  stop_execution.bfp
src/: crash.c  crash.h  interpreter.c  interpreter.h  main.c  memory.c  memory.h  state.h
